--- a/src/pages/privacy.mdx
+++ b/src/pages/privacy.mdx
@@ -4,7 +4,7 @@ author: Quentin Moessner
 description: Politique de confidentialité du Salon SC Coiffure
 ---
 
-export const prerender = true;
+export const prerender = false;
 import Layout from "~/components/organisms/layout/layout.astro";
 
 import HomeLink from "~/components/atoms/HomeLink.astro";
