--- a/src/pages/legal.mdx
+++ b/src/pages/legal.mdx
@@ -6,18 +6,18 @@ companyName: SC Coiffure
 juridicForm: SAS
 address: 5 Av. Garibaldi, 83500 La Seyne-sur-Mer
 phone: 03 89 51 52 53
-email: sc-coiffure@gmail.com
+email: contact@sc-coiffure.fr
 director: Péchin Cécile
 siret: 123 456 789 00000
 tva: FR 12 345 678 901
 capital: 1000 €
 host: Netlify, Inc
 hostAddress: 44 Montgomery Street, Suite 300, San Francisco, California 94104
-contactEmail: sc-coiffure@gmail.com
+contactEmail: contact@sc-coiffure.fr
 ---
 
 export const prerender = false;
-import Layout from "~/components/organisms/layout/layout.astro";
+import Layout from "~/components/organisms/layout/Layout.astro";
 
 import HomeLink from "~/components/atoms/HomeLink.astro";
 
