chore: readme & prettier config

--- a/src/pages/privacy.mdx
+++ b/src/pages/privacy.mdx
@@ -5,9 +5,9 @@ description: Politique de confidentialité du Salon SC Coiffure
 ---
 
 export const prerender = false;
-import Layout from "~/components/organisms/layout/Layout.astro";
+import Layout from '~/components/organisms/layout/Layout.astro';
 
-import HomeLink from "~/components/atoms/HomeLink.astro";
+import HomeLink from '~/components/atoms/HomeLink.astro';
 
 <Layout index={false} title={frontmatter.title}  description={frontmatter.description}>
 <article id="content" class="md">
