--- a/packages/site/src/pages/legal.mdx
+++ b/packages/site/src/pages/legal.mdx
@@ -16,7 +16,7 @@ hostAddress: 44 Montgomery Street, Suite 300, San Francisco, California 94104
 contactEmail: contact@sccoiffure83.fr
 ---
 
-export const prerender = true;
+export const prerender = false;
 import Layout from '~/components/organisms/layout/Layout.astro';
 
 import HomeLink from '~/components/atoms/HomeLink.astro';
