--- a/packages/site/src/pages/privacy.mdx
+++ b/packages/site/src/pages/privacy.mdx
@@ -5,7 +5,7 @@ description: Politique de confidentialité du Salon SC Coiffure
 email: contact@sccoiffure83.fr
 ---
 
-export const prerender = false;
+export const prerender = true;
 import Layout from '~/components/organisms/layout/Layout.astro';
 
 import HomeLink from '~/components/atoms/HomeLink.astro';
