feat(content): add opening content (#9)

--- a/packages/site/src/pages/legal.mdx
+++ b/packages/site/src/pages/legal.mdx
@@ -5,18 +5,18 @@ description: Mentions légales du Salon SC Coiffure
 companyName: SC Coiffure
 juridicForm: SAS
 address: 5 Av. Garibaldi, 83500 La Seyne-sur-Mer
-phone: 03 89 51 52 53
+phone: 09 88 04 85 76
 email: contact@sccoiffure83.fr
 director: Péchin Cécile
-siret: 123 456 789 00000
-tva: FR 12 345 678 901
+siret: 981 172 422 00017
+tva: FR92981172422
 capital: 1000 €
 host: Netlify, Inc
 hostAddress: 44 Montgomery Street, Suite 300, San Francisco, California 94104
 contactEmail: contact@sccoiffure83.fr
 ---
 
-export const prerender = false;
+export const prerender = true;
 import Layout from '~/components/organisms/layout/Layout.astro';
 
 import HomeLink from '~/components/atoms/HomeLink.astro';
